# ai-agent

./: .gitignore  article_cache.db  pyproject.toml  requirements.txt  scripts.py
.cache/41/: cache.db
AINewsJohnStewart/: main.py
AINewsJohnStewart/agents/: meme_lord.py  satirist.py  scout.py  voice_actor.py
AINewsJohnStewart/agents/satirist/: satirist.py
AINewsJohnStewart/agents/satirist/config/: __init__.py  config.yaml  loader.py
AINewsJohnStewart/agents/satirist/templates/: output_validation_template.j2  satirist_fallback_script.j2  script_prompt.j2  system_message.j2
AINewsJohnStewart/agents/scout/: article_cache.py  debriefer.py  digger.py  main.py  models.py  news_client.py  scout.py
AINewsJohnStewart/agents/scout/config/: config.yaml  loader.py
AINewsJohnStewart/agents/scout/templates/: analysis_prompt.j2  system_message.j2
AINewsJohnStewart/boot/: jinja.py  settings.py
AINewsJohnStewart/tests/: test_satirist_agent_basic.py  test_satirist_agent_integration.py  test_satirist_llm_integration.py  test_scout.py  test_scout_agent_integration.py
AINewsJohnStewart/utils/: logger.py  settings.py
scripts/: test_runner.py
