[project]
name = "AINewsJohnStewart"
version = "0.1.0"
description = "AI-powered news satire generator"
requires-python = ">=3.8"
dependencies = [
    "pyautogen>=0.7.4",
    "python-dotenv>=1.0.0",
    "anthropic>=0.13.0",
    "requests>=2.31.0",
    "pillow>=10.0.1",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "AINewsJohnStewart/tests",
]

[tool.autogen]
llm_cache_path = "./data/llm_cache.db"  # Reuse responses

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.1",
]

[tool.hatch.build.targets.wheel]
packages = ["AINewsJohnStewart"]
