[tool.poetry]
name = "AINewsJohnStewart"
version = "0.1.0"
description = "AI-powered news satire generator"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "AINewsJohnStewart"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyautogen = ">=0.7.4"
python-dotenv = ">=1.0.0"
anthropic = ">=0.13.0"
requests = ">=2.31.0"
pillow = ">=10.0.1"
pydantic-settings = ">=2.1.0"
tenacity = ">=8.2.3"
jinja2 = ">=3.1.5"
PyYAML = "^6.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-satirist = "scripts:run_satirist_tests"

[tool.pytest.ini_options]
testpaths = ["AINewsJohnStewart/tests"]
python_files = "test_*.py"
addopts = "-v --cov=AINewsJohnStewart/agents/satirist --cov-report=term-missing"
pythonpath = ["."]

[tool.autogen]
llm_cache_path = "./data/llm_cache.db"
